--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,20 +1,32 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: rgb(40, 40, 40);
+.chat-app {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.chat-room-list {
+  background: rgb(25, 25, 25);
+}
+
+.chat-box {
+  display: flex;
+  flex-direction: column;
+  max-height: calc(100vh - 10rem);
+  overflow-y: auto;
+  background: rgb(25, 25, 25);
+  border-radius: 10px;
+}
+
+.logout-btn {
+  padding: 10px;
+  background-color: #007bff;
   color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-/* All users */
 .all-users {
   display: flex;
   margin-bottom: 1rem;
@@ -32,7 +44,6 @@ code {
 
 /* User Card */
 .user-card {
-  color: white;
   position: relative;
   border-bottom: 1px solid rgb(100, 100, 100);
   width: 380px;
@@ -102,7 +113,7 @@ code {
 }
 
 .message.self {
-  /* color: white; */
+  color: white;
   background: #00bd9b;
 }
 
@@ -127,8 +138,93 @@ code {
   border-radius: 50%;
 }
 
-/* .mark-as-read {
+/* Notification */
+.notifications {
+  position: relative;
+}
+
+.notifications-icon {
+  color: white;
+  cursor: pointer;
+  position: relative;
+  margin-right: 1rem;
+}
+
+.notifications-box {
+  max-height: 50vh;
+  width: 300px;
+  position: absolute;
+  top: 2rem;
+  right: 0;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  background: #181d31;
+  color: white;
+  z-index: 5;
+}
+
+.notifications-header {
+  padding: 1rem;
+  padding-bottom: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.notifications-box h3 {
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.mark-as-read {
   cursor: pointer;
   font-weight: 700;
   opacity: 0.8;
-} */
+}
+
+.notification {
+  font-size: 14px;
+  margin: 1rem 0;
+  padding-bottom: 0.2rem;
+  border-bottom: 1px solid rgb(207, 207, 207);
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+}
+
+.notification.not-read {
+  background: #263159;
+}
+
+.notification-time {
+  margin-top: 0.2rem;
+  font-size: 12px;
+  color: #e0e0e0;
+}
+
+.notification-count {
+  display: flex;
+  background: #00bd9b;
+  height: 25px;
+  width: 25px;
+  font-size: 14px;
+  font-weight: 700;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: -10px;
+  right: -15px;
+}
+
+.this-user-notifications {
+  display: flex;
+  background: #00bd9b;
+  height: 20px;
+  width: 20px;
+  font-size: 12px;
+  font-weight: 700;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
