--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,15 +6,7 @@
 
 .chat-room-list {
   background: rgb(25, 25, 25);
-}
-
-.chat-box {
-  display: flex;
-  flex-direction: column;
-  max-height: calc(100vh - 10rem);
-  overflow-y: auto;
-  background: rgb(25, 25, 25);
-  border-radius: 10px;
+  height: 100vh;
 }
 
 .logout-btn {
@@ -57,27 +49,14 @@
   font-weight: 700;
 }
 
-.user-card .text,
-.user-card .date {
+.user-card .text {
   font-size: 14px;
   color: rgb(180, 180, 180);
 }
 
-.user-online {
-  display: inline-block;
-  height: 12px;
-  width: 12px;
-  border-radius: 50%;
-  background: rgb(0, 219, 0);
-  position: absolute;
-  top: -3px;
-  right: -3px;
-  z-index: 2;
-}
-
 /* Chat Box */
 .chat-box {
-  max-height: calc(100vh - 10rem);
+  max-height: 100vh;
   overflow-y: auto;
   background: rgb(25, 25, 25);
   border-radius: 10px;
@@ -136,95 +115,4 @@
   height: 40px;
   width: 40px;
   border-radius: 50%;
-}
-
-/* Notification */
-.notifications {
-  position: relative;
-}
-
-.notifications-icon {
-  color: white;
-  cursor: pointer;
-  position: relative;
-  margin-right: 1rem;
-}
-
-.notifications-box {
-  max-height: 50vh;
-  width: 300px;
-  position: absolute;
-  top: 2rem;
-  right: 0;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  background: #181d31;
-  color: white;
-  z-index: 5;
-}
-
-.notifications-header {
-  padding: 1rem;
-  padding-bottom: 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-.notifications-box h3 {
-  font-weight: 700;
-  font-size: 20px;
-}
-
-.mark-as-read {
-  cursor: pointer;
-  font-weight: 700;
-  opacity: 0.8;
-}
-
-.notification {
-  font-size: 14px;
-  margin: 1rem 0;
-  padding-bottom: 0.2rem;
-  border-bottom: 1px solid rgb(207, 207, 207);
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-  padding: 0.5rem 1rem;
-}
-
-.notification.not-read {
-  background: #263159;
-}
-
-.notification-time {
-  margin-top: 0.2rem;
-  font-size: 12px;
-  color: #e0e0e0;
-}
-
-.notification-count {
-  display: flex;
-  background: #00bd9b;
-  height: 25px;
-  width: 25px;
-  font-size: 14px;
-  font-weight: 700;
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: -10px;
-  right: -15px;
-}
-
-.this-user-notifications {
-  display: flex;
-  background: #00bd9b;
-  height: 20px;
-  width: 20px;
-  font-size: 12px;
-  font-weight: 700;
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
 }
