--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,118 +1,4 @@
-.chat-app {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-.chat-room-list {
-  background: rgb(25, 25, 25);
-  height: 100vh;
-}
-
-.logout-btn {
-  padding: 10px;
-  background-color: #007bff;
+body {
+  background: black;
   color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
-}
-
-.all-users {
-  display: flex;
-  margin-bottom: 1rem;
-}
-
-.single-user {
-  background: rgb(0, 213, 255);
-  color: white;
-  cursor: pointer;
-  padding: 5px 7px;
-  border-radius: 10px;
-  margin-right: 0.5rem;
-  position: relative;
-}
-
-/* User Card */
-.user-card {
-  position: relative;
-  border-bottom: 1px solid rgb(100, 100, 100);
-  width: 380px;
-}
-
-.user-card .text-content {
-  width: 170px;
-}
-
-.user-card .name {
-  font-weight: 700;
-}
-
-.user-card .text {
-  font-size: 14px;
-  color: rgb(180, 180, 180);
-}
-
-/* Chat Box */
-.chat-box {
-  max-height: 100vh;
-  overflow-y: auto;
-  background: rgb(25, 25, 25);
-  border-radius: 10px;
-}
-
-.messages-box {
-  height: 85vh;
-}
-
-/* Chat Header */
-.chat-header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.75rem;
-  color: white;
-  background: rgb(30, 30, 30);
-}
-
-/* Messages */
-.messages {
-  max-height: calc(100vh - 15rem);
-  overflow-y: auto;
-  padding: 0 2rem;
-}
-
-.message {
-  color: white;
-  background: #282828;
-  padding: 0.75rem;
-  border-radius: 5px;
-  max-width: 50%;
-}
-
-.message.self {
-  color: white;
-  background: #00bd9b;
-}
-
-.message-footer {
-  font-size: 12px;
-  align-self: flex-end;
-  font-weight: 400;
-}
-
-/* Chat Input  */
-.chat-input {
-  width: 100%;
-  background: rgb(30, 30, 30);
-  padding: 1rem;
-}
-.send-btn {
-  border: none;
-  background: rgba(72, 112, 223, 1);
-  color: white;
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
 }
