--- a/frontend/src/styles/Form.css
+++ b/frontend/src/styles/Form.css
@@ -6,8 +6,8 @@
   margin: 50px auto;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   max-width: 400px;
+  background: rgb(25,25,25);
 }
 
 .form-input {
@@ -23,6 +23,16 @@
   width: 95%;
   padding: 10px;
   margin: 20px 0;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.logout-btn {
+  padding: 10px;
   background-color: #007bff;
   color: white;
   border: none;
